examples/datalog/11_types/33_int_arithmetic.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_int_arith
Knowledge graph 'test_int_arith' created.
Switched to knowledge graph: test_int_arith
> .kg use test_int_arith
Switched to knowledge graph: test_int_arith
> +nums[(100,), (7,)].
Inserted 2 fact(s) into 'nums'.
> ops(N, Add, Sub, Mul, Div, Mod) :- nums(N), N = 100, Add = N + 23, Sub = N - 23, Mul = N * 3, Div = N / 7, Mod = N ?- ops(N, A, S, M, D, R).
Script error: Parse error: Invalid term: 'N - 23'
